# ingest

./: .gitignore  LICENSE  README.md  RELEASE.md  document_cleaner.py  ingest.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-release.yml  release.yml  test.yml
examples/: Example-Bill-of-Lading-Waste.docx  HS_CODES_TABLE.xlsx
