[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingest-cli"
version = "1.0.2"
description = "High-quality document processing for RAG pipelines, supporting multiple formats and processing backends"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RealTimeX", email = "trung@realtimex.ai"}
]
keywords = [
    "pdf",
    "document-processing",
    "ocr",
    "nlp",
    "rag",
    "ingest",
    "llm",
    "table-extraction",
    "vector-database"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Markup :: Markdown",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "loguru>=0.7.0",
    "tqdm>=4.65.0",
    "pypdf>=3.0.0",
    "python-docx>=1.0.0",
    "openpyxl>=3.1.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
marker = [
    "marker-pdf[full]>=0.2.0",
]
llm = [
    "google-generativeai",
    "anthropic",
    "openai",
]
full = [
    "marker-pdf[full]>=0.2.0",
    "google-generativeai",
    "anthropic",
    "openai",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/therealtimex/ingest"
Repository = "https://github.com/therealtimex/ingest"
Issues = "https://github.com/therealtimex/ingest/issues"

[project.scripts]
ingest = "ingest:main"

[tool.setuptools]
py-modules = ["ingest", "document_cleaner"]
